# ai-study-planning-agent

./: README.md
backend/: .gitignore  README.md  main.py  main.py.bak  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/api/: guideService.js
frontend/src/pages/: Generando.jsx  GenerateGuide.jsx  GuideStatus.jsx  Home.jsx  HowItWorks.jsx
