[project]
name = "study-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.1,<0.31.0",
  "python-multipart>=0.0.9,<0.1.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-core>=2.20.1,<3.0.0",
  "langchain>=0.2.11,<0.3.0",
  "langchain-chroma>=0.2.2,<0.3.0",
  "langchain-community>=0.2.10,<0.3.0",
  "langchain-google-genai>=1.0.7,<2.0.0",
  "chromadb>=0.5.3,<0.6.0",
  "google-generativeai>=0.7.2,<0.8.0",
  "firebase-admin>=6.2.0,<7.0.0",
  "pypdf>=4.2.0,<5.0.0",
  "tavily-python>=0.3.3,<0.4.0",
  "httpx>=0.27.0,<0.28.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "typing-extensions>=4.12.2,<5.0.0",
  "numpy>=1.24.0,<2.0.0",
]
